--- a/style.css
+++ b/style.css
@@ -1,82 +1,102 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-body{
-    background: rgb(25,125,252);
-    background: linear-gradient(156deg, rgba(25,125,252,1) 35%, rgba(250,142,84,1) 100%);
-    height: 100vh;
+body {
+  background: rgb(25, 125, 252);
+  background: linear-gradient(
+    156deg,
+    rgba(25, 125, 252, 1) 35%,
+    rgba(250, 142, 84, 1) 100%
+  );
+  height: 100vh;
 }
-.container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-repeat: no-repeat;
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-repeat: no-repeat;
 }
-.todo-app{
-    background-color: #fff;
-    max-width: 540px;
-    width: 100%; /*100% from max-width*/
-    margin: 100px auto;
-    padding: 40px 30px 70px 30px;
-    border-radius: 20px 0 20px 0 ;
-    box-shadow: 0 4px 11px 0 rgba(0, 0, 0, 0.7);
-    border: 2px solid gray;
+.todo-app {
+  background-color: #fff;
+  max-width: 540px;
+  width: 100%; /*100% from max-width*/
+  margin: 100px auto;
+  padding: 40px 30px 70px 30px;
+  border-radius: 20px 0 20px 0;
+  box-shadow: 0 4px 11px 0 rgba(0, 0, 0, 0.7);
+  border: 2px solid gray;
 }
-h2{
-    margin-bottom: 15px;
-    font-size: 1.8rem;
-    color: tomato;
+h2 {
+  margin-bottom: 15px;
+  font-size: 1.8rem;
+  color: tomato;
 }
-.row{
-    background-color: #edeef0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    border-radius: 10px;
-    margin-bottom: 15px ;
+.row {
+  background-color: #edeef0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px;
+  margin-bottom: 15px;
 }
-.row input{
-    padding: 15px;
-    width: 100%;
-    border-radius: 10px;
-    background-color: transparent;
-    border: none;
-    outline: none;
-    font-size: 1rem;
+.row input {
+  padding: 15px;
+  width: 100%;
+  border-radius: 10px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-size: 1rem;
 }
-.row button{
-    padding: 20px 50px;
-    background-color: tomato;
-    color: white;
-    font-size: 1.3rem;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
+.row button {
+  padding: 20px 50px;
+  background-color: tomato;
+  color: white;
+  font-size: 1.3rem;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
 }
-.row button:hover{
-    background-color:  #d38b7e;;
+.row button:hover {
+  background-color: #d38b7e;
 }
 /*****************start list*****************/
-ul li{
-    list-style: none;
-    padding: 15px;
-    cursor: pointer;
-    color: white;
-    background-color: tomato;
-    border-radius: 10px;
-    transition: ease 0.5s;
-    font-size: 1.1rem;
-    letter-spacing: 1px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 10px 0 ;
+ul li {
+  list-style: none;
+  font-size: 17px;
+  padding: 12px 8px 12px 50px;
+  /* user-select: none; */
+  cursor: pointer;
+  position: relative;
 }
-ul li:hover{
-    box-shadow: 0 4px 11px 0 rgba(0, 0, 0, 0.7);
+ul li::before{
+  content: "";
+  position: absolute;
+  background-image: url(images/unchecked.png);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  top: 7px;
+  left: 8px;
 }
-ul li.checked{
-    text-decoration: line-through;
-    color: #555;
+ul li.checked::before{
+  background-image: url(images/checked.png);
+}
+ul li span{
+  position: absolute;
+  right: 0;
+  top: 12px;
+  padding-right: 10px;
+}
+ul li:hover {
+  box-shadow: 0 4px 11px 0 rgba(0, 0, 0, 0.7);
+}
+ul li.checked {
+  text-decoration: line-through;
+  color: #555;
 }
